[BUGFIX]: Add position absolute for preview image in news simple list.
Default preview image was not visible without position style.

--- a/Resources/Public/less/main.less
+++ b/Resources/Public/less/main.less
@@ -3626,6 +3626,7 @@
 .news-simple-list__media-preview {
     width: 100%;
     height: 100%;
+    position: absolute;
 }
 
 .news-simple-list__text {
