--- a/felayout_t3kit/dev/styles/main/plugins/news/newsSimpleList.less
+++ b/felayout_t3kit/dev/styles/main/plugins/news/newsSimpleList.less
@@ -20,6 +20,7 @@
 .news-simple-list__media-preview {
     width: 100%;
     height: 100%;
+    position: absolute;
 }
 
 .news-simple-list__text {
